Angular and packages update

--- a/src/AdminWeb/src/app/components/lookups/user-lookup/user-lookup.component.html
+++ b/src/AdminWeb/src/app/components/lookups/user-lookup/user-lookup.component.html
@@ -4,7 +4,7 @@
   <ng-select
     ngSelector
     [loading]="lookup.loading"
-    [items]="lookup.value"
+    [items]="$any(lookup.value)"
     bindValue="id"
     bindLabel="username"
     [formControl]="formControl"
