--- a/src/AdminWeb/src/app/components/notification-toast/notification-toast.component.html
+++ b/src/AdminWeb/src/app/components/notification-toast/notification-toast.component.html
@@ -13,7 +13,7 @@
 
   <c-toast-body
     #toast
-    [cToastClose]="toast.toast"
+    [cToastClose]="this"
     class="bg-light rounded-2 rounded-top-0"
   >
     @if (notification) {
