--- a/src/AdminWeb/src/app/views/emote/emote-detail/emote-detail.component.html
+++ b/src/AdminWeb/src/app/views/emote/emote-detail/emote-detail.component.html
@@ -20,7 +20,7 @@
                   [src]="response.value.emoteUrl"
                   [alt]="response.value.emoteName"
                   class="d-none d-md-inline object-fit-cover"
-                  style="min-height: 100%; object-position: left"
+                  style="min-height: 100%; object-position: left; min-width: 140px"
                 />
 
                 <img
