--- a/src/AdminWeb/src/scss/_ag-grid.scss
+++ b/src/AdminWeb/src/scss/_ag-grid.scss
@@ -1,3 +1,5 @@
+@use "@coreui/coreui/scss/coreui" as *;
+
 @import "ag-grid-community/styles/ag-grid.css";
 @import "ag-grid-community/styles/ag-theme-balham.css";
 
