--- a/src/AdminWeb/src/app/components/lookups/channel-lookup/channel-lookup.component.html
+++ b/src/AdminWeb/src/app/components/lookups/channel-lookup/channel-lookup.component.html
@@ -4,7 +4,7 @@
   <ng-select
     ngSelector
     [loading]="lookup.loading"
-    [items]="lookup.value"
+    [items]="$any(lookup.value)"
     bindLabel="name"
     bindValue="id"
     [formControl]="formControl"
